# llm-adapters

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
llm_adapters/: __init__.py  client.py  config.py  exceptions.py  models.py
llm_adapters/providers/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py  openai_responses.py  registry.py
llm_adapters/utils/: retry.py
tests/: test_client.py  test_e2e.py  test_models.py  test_openai_responses.py  test_providers.py  test_retry.py
