[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-dial"
version = "0.1.0"
description = "A minimal, auditable Python library for calling multiple LLM providers. Lightweight LiteLLM alternative."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Simon", email = "simonlemon333@gmail.com" },
]
keywords = ["llm", "openai", "anthropic", "ollama", "deepseek", "ai", "adapter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
serve = ["uvicorn>=0.30", "starlette>=0.38"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/simonlemon333/llm-adapters"
Repository = "https://github.com/simonlemon333/llm-adapters"
Issues = "https://github.com/simonlemon333/llm-adapters/issues"

[project.scripts]
llm-dial = "llm_adapters.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_adapters"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
